samples/_failures_safe/1761594435_cc8f71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36886f23.c: In function ‘main’:
./samples/SAFE/__tmp_36886f23.c:146:9: error: expected expression at end of input
  146 |         } else
      |         ^
./samples/SAFE/__tmp_36886f23.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_36886f23.c:146:9: error: expected declaration or statement at end of input
